--- a/Denoising/Options/Medical/GaussianGrayDenoising_Paired_Medical_Restormer.yml
+++ b/Denoising/Options/Medical/GaussianGrayDenoising_Paired_Medical_Restormer.yml
@@ -35,7 +35,7 @@ datasets:
 
     ### ------- Training on single fixed-patch size 128x128---------
     mini_batch_sizes: [1]   
-    iters: [30000, 60000]
+    iters: [30000]
     gt_size: 256
     gt_sizes: [128]
     ### ------------------------------------------------------------
